# Glossa

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
glossa/: __init__.py  chat.py  concurrency.py  config.py  main.py  pricing.py  query.py
glossa/activity/: aggregator.py  middleware.py  models.py  recorder.py
glossa/auth/: __init__.py  context.py  dependency.py  scoping.py
glossa/dashboard/: access.py  routes.py
glossa/db/: client.py
glossa/ingest/: agents.py  doc_parser.py  extract.py  index_writer.py  log_writer.py  page_writer.py  prompts.py  source_fetcher.py  url_fetcher.py  webhook_delivery.py  workflow.py  working_copy.py
glossa/lint/: __init__.py  contradictions.py  prompts.py  report_writer.py  scanner.py  workflow.py
glossa/llm/: __init__.py  base.py  byo.py  factory.py  hosted.py  models.py
glossa/mcp/: __init__.py  client.py  (+1 more)
scripts/: backfill_tenants.py
tests/: conftest.py  fake_llm.py  test_activity.py  test_admin.py  test_api_keys.py  test_auth.py  test_chat.py  test_dashboard.py  test_dashboard_e2e.py  test_dashboard_tenant.py  test_dashboard_views.py  test_hosted_llm.py  test_ingest.py  test_ingest_url_upload.py  test_lint.py  test_mcp.py  test_md_sections.py  test_models.py  test_oauth.py  test_obsidian.py  test_pricing.py  test_query.py  test_quota_extensions.py  test_sessions.py  test_smoke.py  test_storage_defaults.py  test_tenant_isolation.py  test_tenant_models.py  test_usage.py  test_user_models.py  test_utils.py  test_webhook_signing.py
(+74 files in other folders)
