[project]
name = "glossa"
version = "0.1.0"
description = "LLM-maintained wikis as a service. Markdown is the contract."
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
]

[project.scripts]
glossa-mcp = "glossa.mcp.server:main"
glossa-obsidian-sync = "glossa.obsidian.sync:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "T20",
    "RUF",
]
ignore = [
    "E501",
    "W291",
    "W293",
    "B008",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["glossa"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "F821", "F811", "B020"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
]
